--- a/app.html
+++ b/app.html
@@ -6,6 +6,8 @@
 <body>
   <script>
     loadClient();  </script>
-  <script src="script.js"></script>
+  <script> 
+    src="script.js">
+      </script>
 </body>
 </html>
