--- a/app.html
+++ b/app.html
@@ -4,10 +4,9 @@
   <title>Test</title>
 </head>
 <body>
+  <script src="script.js"></script>
   <script>
-    loadClient();  </script>
-  <script> 
-    src="script.js">
-      </script>
+    loadClient();
+  </script>
 </body>
 </html>
