--- a/app.html
+++ b/app.html
@@ -4,7 +4,7 @@
   <title>Test</title>
 </head>
 <body>
-  <script src="script.js"></script>
+  <script src="scripts/script.js"></script>
   <script>
     loadClient();
   </script>
